--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -51,3 +51,23 @@
 	year={2009},
 	publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
+
+ @Manual{R,
+	title = {R: A Language and Environment for Statistical Computing},
+	author = {{R Core Team}},
+	organization = {R Foundation for Statistical Computing},
+	address = {Vienna, Austria},
+	year = {2022},
+	url = {https://www.R-project.org/},
+}
+
+  @Book{MASS,
+	title = {Modern Applied Statistics with S},
+	author = {W. N. Venables and B. D. Ripley},
+	publisher = {Springer},
+	edition = {Fourth},
+	address = {New York},
+	year = {2002},
+	note = {ISBN 0-387-95457-0},
+	url = {https://www.stats.ox.ac.uk/pub/MASS4/},
+}
